Wed Feb  6 04:41:09 2002  Tim Janik  <timj@gtk.org>

	* bseiirfilter.[hc]: new IIR filter module.
	for some odd reaon, band pass and stop filters aren't
	currently working.

Tue Feb  5 04:38:54 2002  Tim Janik  <timj@gtk.org>

	* bsesequencer.[hc]: new mini sequencer.

Fri Feb  1 02:16:02 2002  Tim Janik  <timj@gtk.org>

	* bsesimpleosc.c:
	* bsegenosc.c: use bse_source_update_omodules() now as the
	variant for imodules vanished.

Tue Jan 29 15:17:43 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper: set consumership.

	* removed bseconstant.[hc] as this is in BSE now.

Thu Jan 24 11:03:49 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.c (bse_snooper_context_create): get rid of hard coded
	number of istreams.

Thu Jan 24 01:38:49 2002  Tim Janik  <timj@gtk.org>

	* *.c: fix categories so /Modules/ is used instead of /Source/.

	* bsewaveosc.c: make n_octaves stepping more fine grained.
	fix description.

Tue Jan 15 17:38:57 2002  Tim Janik  <timj@gtk.org>

	* bsesnooper.[hc]: deal with multiple incarnations by letting
	the user specify a context id which identifies the context to
	snoop on.

Tue Jan 15 17:37:14 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc*.[hc]: stripped GslModule calculation code,
	use functions from gslwaveosc.h unstead. adapted input/output
	channels, supports modulation (linear and exponential) now.
	got rid of bsewaveosc-aux.c.

Sat Jan 12 13:36:12 2002  Tim Janik  <timj@gtk.org>

	* bsewaveosc.[hc]: fixed GslModule channel allocations.
	use if_reject/if_expect where apropriate.
	use tschebyscheff type II again.

Thu Dec 20 07:01:32 2001  Tim Janik  <timj@gtk.org>

	* bsewaveosc.c (wmod_process): removed commented reference
	implementation, clear filter state beyond GSL_SIGNAL_EPSILON.

Sat Oct 20 12:51:57 2001  Tim Janik  <timj@gtk.org>

	* icons/filter.xcf: new excellent image by drc.

	* icons/filter.xcf: moved this to cyria-filter.xcf.

Thu Sep 27 14:42:11 2001  Tim Janik  <timj@gtk.org>
